Improved import from Steam API Fixed categories not wrapping

--- a/thefiltershop/filtershop_main/static/thefiltershop/style.css
+++ b/thefiltershop/filtershop_main/static/thefiltershop/style.css
@@ -589,7 +589,7 @@ a:visited {
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    padding: 6px;
+    padding: 2px;
     border-radius: 10px;
     background-color: #b7e2e6;
   }
@@ -603,6 +603,7 @@ a:visited {
     gap: 1rem;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
   }
 
   .positive_filter {
